syntax = "proto3";

package ai.lzy.v1.channel.v2;

import "ai/lzy/v1/common/data-scheme.proto";
import "ai/lzy/v1/common/slot.proto";
import "ai/lzy/v1/common/storage.proto";

option java_outer_classname = "LCM";
option java_package = "ai.lzy.v1.channel.v2";

message ChannelStatus {
  string channel_id                  = 1;
  ChannelSpec spec                   = 2;
  string execution_id                = 3;
  repeated PeerDescription senders   = 4;
  repeated PeerDescription receivers = 5;
}

message ChannelSpec {
  string channel_name                = 1;
  ai.lzy.v1.common.DataScheme scheme = 2;
}

message PeerDescription {
  string peer_id             = 1;

  oneof peer {
    SlotPeer slot_peer       = 2;
    StoragePeer storage_peer = 3;
  }

  message SlotPeer {
    string peer_url = 2;
  }

  message StoragePeer {
    string storage_uri = 1;  // Uri of bucket and key to get data from

    oneof credentials {
      common.S3Credentials s3 = 2;
      common.AzureBlobStorageCredentials azure = 3;
    }
  }
}
